crates/common/src/instrument/snapshots/common__instrument__config__tests__config_1280x720.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  {
    "channel": "Right",
    "nodes": [
      {
        "key": [
          0,
          0
        ],
        "frequency": 120.04773395710404,
        "l": 18.0,
        "phase": 0.0,
        "divisions": 5,
        "cents": 0.0
      },
      {
        "key": [
          0,
          1
        ],
        "frequency": 137.89863451764714,
        "l": 57.74105844362137,
        "phase": 0.06366197723675814,
        "divisions": 5,
        "cents": 240.00000000000048
      },
      {
        "key": [
          0,
          2
        ],
        "frequency": 158.40393462675857,
        "l": 97.48211688724274,
        "phase": 0.12732395447351627,
        "divisions": 5,
        "cents": 479.9999999999999
      },
      {
        "key": [
          0,
          3
        ],
        "frequency": 181.95833913081546,
        "l": 137.2231753308641,
        "phase": 0.1909859317102744,
        "divisions": 5,
        "cents": 719.9999999999999
      },
      {
        "key": [
          0,
          4
        ],
        "frequency": 209.01524483756035,
        "l": 176.96423377448548,
        "phase": 0.25464790894703254,
        "divisions": 5,
        "cents": 959.9999999999999
      }
    ]
  },
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          1,
          0
        ],
        "frequency": 169.71245216965124,
        "l": 236.0126890328217,
        "phase": 0.3183098861837907,
        "divisions": 5,
        "cents": 0.0
      },
      {
        "key": [
          1,
          1
        ],
        "frequency": 194.9484146297914,
        "l": 275.7537474764431,
        "phase": 0.3819718634205488,
        "divisions": 5,
        "cents": 240.00000000000014
      },
      {
        "key": [
          1,
          2
        ],
        "frequency": 223.93692319452126,
        "l": 315.49480592006444,
        "phase": 0.44563384065730693,
        "divisions": 5,
        "cents": 479.9999999999999
      },
      {
        "key": [
          1,
          3
        ],
        "frequency": 257.2359752966439,
        "l": 355.2358643636858,
        "phase": 0.5092958178940651,
        "divisions": 5,
        "cents": 719.9999999999999
      },
      {
        "key": [
          1,
          4
        ],
        "frequency": 295.4865416693128,
        "l": 394.9769228073071,
        "phase": 0.5729577951308232,
        "divisions": 5,
        "cents": 959.9999999999999
      }
    ]
  }
]
