crates/common/src/instrument/snapshots/common__instrument__config__tests__config_1280x720_Yo.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  [
    {
      "channel": "Right",
      "nodes": [
        {
          "key": [
            0,
            0
          ],
          "frequency": 75.02964201133096,
          "l": 333.2338015926426,
          "phase": 0.0,
          "divisions": 5,
          "cents": 0.0
        },
        {
          "key": [
            0,
            1
          ],
          "frequency": 86.18642635443231,
          "l": 372.974860036264,
          "phase": 0.06366197723675814,
          "divisions": 5,
          "cents": 240.00000000000014
        },
        {
          "key": [
            0,
            2
          ],
          "frequency": 99.00220617640949,
          "l": 412.7159184798853,
          "phase": 0.12732395447351627,
          "divisions": 5,
          "cents": 479.9999999999999
        },
        {
          "key": [
            0,
            3
          ],
          "frequency": 113.72367137591888,
          "l": 452.45697692350666,
          "phase": 0.1909859317102744,
          "divisions": 5,
          "cents": 719.9999999999999
        },
        {
          "key": [
            0,
            4
          ],
          "frequency": 130.63419423374143,
          "l": 492.198035367128,
          "phase": 0.25464790894703254,
          "divisions": 5,
          "cents": 959.9999999999999
        }
      ]
    },
    {
      "channel": "Left",
      "nodes": [
        {
          "key": [
            1,
            0
          ],
          "frequency": 150.0875909374651,
          "l": 551.2464906254642,
          "phase": 0.3183098861837907,
          "divisions": 5,
          "cents": 0.0
        },
        {
          "key": [
            1,
            1
          ],
          "frequency": 172.40536881533407,
          "l": 590.9875490690855,
          "phase": 0.3819718634205488,
          "divisions": 5,
          "cents": 240.00000000000014
        },
        {
          "key": [
            1,
            2
          ],
          "frequency": 198.04176355083135,
          "l": 630.7286075127068,
          "phase": 0.44563384065730693,
          "divisions": 5,
          "cents": 479.9999999999999
        },
        {
          "key": [
            1,
            3
          ],
          "frequency": 227.49024801155173,
          "l": 670.4696659563282,
          "phase": 0.5092958178940651,
          "divisions": 5,
          "cents": 719.9999999999999
        },
        {
          "key": [
            1,
            4
          ],
          "frequency": 261.31767366873703,
          "l": 710.2107243999495,
          "phase": 0.5729577951308232,
          "divisions": 5,
          "cents": 960.0000000000002
        }
      ]
    }
  ],
  "Yo"
]
