crates/common/src/instrument/snapshots/common__instrument__config__tests__config_1280x800.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  {
    "channel": "Right",
    "nodes": [
      {
        "key": [
          0,
          0
        ],
        "frequency": 240.0954679142081,
        "l": 0.0,
        "phase": 0.0,
        "divisions": 5,
        "cents": 1200.0
      },
      {
        "key": [
          0,
          1
        ],
        "frequency": 209.01524483756035,
        "l": 40.89112122816346,
        "phase": 0.06366197723675814,
        "divisions": 5,
        "cents": 959.9999999999999
      },
      {
        "key": [
          0,
          2
        ],
        "frequency": 181.95833913081546,
        "l": 81.78224245632693,
        "phase": 0.12732395447351627,
        "divisions": 5,
        "cents": 719.9999999999999
      },
      {
        "key": [
          0,
          3
        ],
        "frequency": 158.4039346267586,
        "l": 122.6733636844904,
        "phase": 0.1909859317102744,
        "divisions": 5,
        "cents": 480.0000000000002
      },
      {
        "key": [
          0,
          4
        ],
        "frequency": 137.8986345176471,
        "l": 163.56448491265385,
        "phase": 0.25464790894703254,
        "divisions": 5,
        "cents": 239.9999999999998
      }
    ]
  },
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          1,
          0
        ],
        "frequency": 480.01930312383195,
        "l": 224.321737911585,
        "phase": 0.3183098861837907,
        "divisions": 5,
        "cents": 1200.0
      },
      {
        "key": [
          1,
          1
        ],
        "frequency": 417.8810747274648,
        "l": 265.21285913974845,
        "phase": 0.3819718634205488,
        "divisions": 5,
        "cents": 959.9999999999998
      },
      {
        "key": [
          1,
          2
        ],
        "frequency": 363.7866049947843,
        "l": 306.1039803679119,
        "phase": 0.44563384065730693,
        "divisions": 5,
        "cents": 719.9999999999999
      },
      {
        "key": [
          1,
          3
        ],
        "frequency": 316.69463389779406,
        "l": 346.99510159607536,
        "phase": 0.5092958178940651,
        "divisions": 5,
        "cents": 479.9999999999999
      },
      {
        "key": [
          1,
          4
        ],
        "frequency": 275.69869193258444,
        "l": 387.8862228242388,
        "phase": 0.5729577951308232,
        "divisions": 5,
        "cents": 240.00000000000014
      }
    ]
  }
]
