crates/common/src/instrument/snapshots/common__instrument__config__tests__config_1280x800_In.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  [
    {
      "channel": "Right",
      "nodes": [
        {
          "key": [
            0,
            0
          ],
          "frequency": 159.4388302666918,
          "phase": 0.0,
          "cents": 491.4810826274373,
          "l_mm": 400.0056265875201,
          "w_kg": 0.4,
          "v_cm3": 200.0
        },
        {
          "key": [
            0,
            1
          ],
          "frequency": 191.61664937892226,
          "phase": 0.16666666666666666,
          "cents": 809.7449505626737,
          "l_mm": 292.03572086206935,
          "w_kg": 0.2427205811681976,
          "v_cm3": 77.82867259424928
        },
        {
          "key": [
            0,
            2
          ],
          "frequency": 240.06672711029418,
          "phase": 0.3333333333333333,
          "cents": 1200.0,
          "l_mm": 148.3286482759053,
          "w_kg": 0.13154623748147162,
          "v_cm3": 10.19780755035111
        }
      ]
    },
    {
      "channel": "Left",
      "nodes": [
        {
          "key": [
            1,
            0
          ],
          "frequency": 318.88716383698596,
          "phase": 0.5,
          "cents": 491.4810826274373,
          "l_mm": 53.935805106256716,
          "w_kg": 0.060815118342908175,
          "v_cm3": 0.4903014667920311
        },
        {
          "key": [
            1,
            1
          ],
          "frequency": 383.2447200106928,
          "phase": 0.6666666666666666,
          "cents": 809.7449505626737,
          "l_mm": 30.45609436347027,
          "w_kg": 0.03690270217000847,
          "v_cm3": 0.08827837354394155
        },
        {
          "key": [
            1,
            2
          ],
          "frequency": 480.1477633257714,
          "phase": 0.8333333333333333,
          "cents": 1200.0,
          "l_mm": 20.00028132937601,
          "w_kg": 0.02,
          "v_cm3": 0.025
        }
      ]
    }
  ],
  "In"
]
