crates/common/src/instrument/snapshots/common__instrument__config__tests__config_1366x768.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  {
    "channel": "Right",
    "nodes": [
      {
        "key": [
          0,
          0
        ],
        "frequency": 120.06125436863204,
        "l": 18.0,
        "phase": 0.0,
        "divisions": 5,
        "cents": 0.0
      },
      {
        "key": [
          0,
          1
        ],
        "frequency": 137.9141653921282,
        "l": 60.4884306511386,
        "phase": 0.06366197723675814,
        "divisions": 5,
        "cents": 240.00000000000014
      },
      {
        "key": [
          0,
          2
        ],
        "frequency": 158.42177491672666,
        "l": 102.9768613022772,
        "phase": 0.12732395447351627,
        "divisions": 5,
        "cents": 479.9999999999999
      },
      {
        "key": [
          0,
          3
        ],
        "frequency": 181.97883224255446,
        "l": 145.4652919534158,
        "phase": 0.1909859317102744,
        "divisions": 5,
        "cents": 719.9999999999999
      },
      {
        "key": [
          0,
          4
        ],
        "frequency": 209.0387852413037,
        "l": 187.9537226045544,
        "phase": 0.25464790894703254,
        "divisions": 5,
        "cents": 959.9999999999999
      }
    ]
  },
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          1,
          0
        ],
        "frequency": 169.8149722597311,
        "l": 251.08430579875628,
        "phase": 0.3183098861837907,
        "divisions": 5,
        "cents": 0.0
      },
      {
        "key": [
          1,
          1
        ],
        "frequency": 195.06617928862025,
        "l": 293.5727364498949,
        "phase": 0.3819718634205488,
        "divisions": 5,
        "cents": 240.00000000000014
      },
      {
        "key": [
          1,
          2
        ],
        "frequency": 224.07219926439475,
        "l": 336.06116710103345,
        "phase": 0.44563384065730693,
        "divisions": 5,
        "cents": 479.9999999999999
      },
      {
        "key": [
          1,
          3
        ],
        "frequency": 257.3913666955781,
        "l": 378.5495977521721,
        "phase": 0.5092958178940651,
        "divisions": 5,
        "cents": 719.9999999999999
      },
      {
        "key": [
          1,
          4
        ],
        "frequency": 295.66503951364916,
        "l": 421.0380284033107,
        "phase": 0.5729577951308232,
        "divisions": 5,
        "cents": 959.9999999999998
      }
    ]
  }
]
