crates/common/src/instrument/snapshots/common__instrument__config__tests__config_1366x768_Yo.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  [
    {
      "channel": "Right",
      "nodes": [
        {
          "key": [
            0,
            0
          ],
          "frequency": 120.0538516146896,
          "phase": 0.0,
          "cents": 0.0,
          "l_mm": 352.6689032061434,
          "w_kg": 150000.0,
          "v_cm3": 18750000.0
        },
        {
          "key": [
            0,
            1
          ],
          "frequency": 151.25837477030305,
          "phase": 0.16666666666666666,
          "cents": 400.00000000000006,
          "l_mm": 407.988595782397,
          "w_kg": 6325.269095141204,
          "v_cm3": 1376616.643443687
        },
        {
          "key": [
            0,
            2
          ],
          "frequency": 190.5736103459924,
          "phase": 0.3333333333333333,
          "cents": 799.9999999999998,
          "l_mm": 463.3082883586506,
          "w_kg": 266.7268608396594,
          "v_cm3": 101070.58042699637
        }
      ]
    },
    {
      "channel": "Left",
      "nodes": [
        {
          "key": [
            1,
            0
          ],
          "frequency": 240.1077032293792,
          "phase": 0.5,
          "cents": 0.0,
          "l_mm": 543.836954767121,
          "w_kg": 11.247461131420971,
          "v_cm3": 7420.556969510307
        },
        {
          "key": [
            1,
            1
          ],
          "frequency": 302.5167495406061,
          "phase": 0.6666666666666666,
          "cents": 400.00000000000006,
          "l_mm": 599.1566473433746,
          "w_kg": 0.4742881219558604,
          "v_cm3": 544.8139854853304
        },
        {
          "key": [
            1,
            2
          ],
          "frequency": 381.1472206919848,
          "phase": 0.8333333333333333,
          "cents": 799.9999999999998,
          "l_mm": 654.4763399196282,
          "w_kg": 0.02,
          "v_cm3": 40.0
        }
      ]
    }
  ],
  "Yo"
]
