crates/common/src/instrument/snapshots/common__instrument__config__tests__config_1440x900.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  {
    "channel": "Right",
    "nodes": [
      {
        "key": [
          0,
          0
        ],
        "frequency": 240.09546791420806,
        "l": 18.0,
        "phase": 0.0,
        "divisions": 5,
        "cents": 1200.0
      },
      {
        "key": [
          0,
          1
        ],
        "frequency": 209.01524483756032,
        "l": 62.852448597141795,
        "phase": 0.06366197723675814,
        "divisions": 5,
        "cents": 959.9999999999999
      },
      {
        "key": [
          0,
          2
        ],
        "frequency": 181.95833913081546,
        "l": 107.70489719428359,
        "phase": 0.12732395447351627,
        "divisions": 5,
        "cents": 720.0000000000001
      },
      {
        "key": [
          0,
          3
        ],
        "frequency": 158.40393462675857,
        "l": 152.55734579142538,
        "phase": 0.1909859317102744,
        "divisions": 5,
        "cents": 479.9999999999999
      },
      {
        "key": [
          0,
          4
        ],
        "frequency": 137.8986345176471,
        "l": 197.40979438856718,
        "phase": 0.25464790894703254,
        "divisions": 5,
        "cents": 240.00000000000014
      }
    ]
  },
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          1,
          0
        ],
        "frequency": 339.4776510221835,
        "l": 264.05290627176976,
        "phase": 0.3183098861837907,
        "divisions": 5,
        "cents": 1200.0
      },
      {
        "key": [
          1,
          1
        ],
        "frequency": 295.5324603238069,
        "l": 308.90535486891156,
        "phase": 0.3819718634205488,
        "divisions": 5,
        "cents": 959.9999999999999
      },
      {
        "key": [
          1,
          2
        ],
        "frequency": 257.2759498071796,
        "l": 353.75780346605336,
        "phase": 0.44563384065730693,
        "divisions": 5,
        "cents": 720.0000000000001
      },
      {
        "key": [
          1,
          3
        ],
        "frequency": 223.97172302718556,
        "l": 398.61025206319516,
        "phase": 0.5092958178940651,
        "divisions": 5,
        "cents": 480.0000000000002
      },
      {
        "key": [
          1,
          4
        ],
        "frequency": 194.97870964371987,
        "l": 443.46270066033696,
        "phase": 0.5729577951308232,
        "divisions": 5,
        "cents": 240.00000000000014
      }
    ]
  }
]
