crates/common/src/instrument/snapshots/common__instrument__config__tests__config_1440x900_In.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  [
    {
      "channel": "Right",
      "nodes": [
        {
          "key": [
            0,
            0
          ],
          "frequency": 149.37405564246507,
          "phase": 0.0,
          "cents": 378.93105489191163,
          "l_mm": 400.0056265875201,
          "w_kg": 0.4,
          "v_cm3": 200.0
        },
        {
          "key": [
            0,
            1
          ],
          "frequency": 164.94756195844656,
          "phase": 0.1,
          "cents": 550.6244889875309,
          "l_mm": 352.7844536912535,
          "w_kg": 0.31012384386311753,
          "v_cm3": 137.20186371069371
        },
        {
          "key": [
            0,
            2
          ],
          "frequency": 184.146376245057,
          "phase": 0.2,
          "cents": 741.2391528225359,
          "l_mm": 282.2903913841861,
          "w_kg": 0.23379224092640505,
          "v_cm3": 70.29427926444599
        },
        {
          "key": [
            0,
            3
          ],
          "frequency": 208.4031340941284,
          "phase": 0.30000000000000004,
          "cents": 955.46791287266,
          "l_mm": 202.71194363267693,
          "w_kg": 0.17018600435315367,
          "v_cm3": 26.029732683548684
        },
        {
          "key": [
            0,
            4
          ],
          "frequency": 240.01984823368605,
          "phase": 0.4,
          "cents": 1200.0,
          "l_mm": 129.64100918358713,
          "w_kg": 0.11844325127262174,
          "v_cm3": 6.808616989992968
        }
      ]
    },
    {
      "channel": "Left",
      "nodes": [
        {
          "key": [
            1,
            0
          ],
          "frequency": 298.74811128493013,
          "phase": 0.5,
          "cents": 378.93105489191163,
          "l_mm": 61.71060465716106,
          "w_kg": 0.06754289428940395,
          "v_cm3": 0.7343635289441017
        },
        {
          "key": [
            1,
            1
          ],
          "frequency": 329.8951239168931,
          "phase": 0.6000000000000001,
          "cents": 550.6244889875309,
          "l_mm": 44.819077715291684,
          "w_kg": 0.052366655006675415,
          "v_cm3": 0.281332846929359
        },
        {
          "key": [
            1,
            2
          ],
          "frequency": 368.292752490114,
          "phase": 0.7000000000000001,
          "cents": 741.2391528225359,
          "l_mm": 32.60293659875238,
          "w_kg": 0.03947751153643759,
          "v_cm3": 0.10829336609021611
        },
        {
          "key": [
            1,
            3
          ],
          "frequency": 416.8062681882568,
          "phase": 0.8,
          "cents": 955.46791287266,
          "l_mm": 24.463927142744083,
          "w_kg": 0.028737138253902752,
          "v_cm3": 0.04575201425658371
        },
        {
          "key": [
            1,
            4
          ],
          "frequency": 480.0396964673721,
          "phase": 0.9,
          "cents": 1200.0,
          "l_mm": 20.00028132937601,
          "w_kg": 0.02,
          "v_cm3": 0.025
        }
      ]
    }
  ],
  "In"
]
