crates/common/src/instrument/snapshots/common__instrument__config__tests__config_1536x864.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  {
    "channel": "Right",
    "nodes": [
      {
        "key": [
          0,
          0
        ],
        "frequency": 240.03627277912074,
        "l": 18.0,
        "phase": 0.0,
        "divisions": 5,
        "cents": 1200.0
      },
      {
        "key": [
          0,
          1
        ],
        "frequency": 208.96371247936565,
        "l": 65.91928268925405,
        "phase": 0.06366197723675814,
        "divisions": 5,
        "cents": 959.9999999999999
      },
      {
        "key": [
          0,
          2
        ],
        "frequency": 181.9134776073611,
        "l": 113.8385653785081,
        "phase": 0.12732395447351627,
        "divisions": 5,
        "cents": 719.9999999999999
      },
      {
        "key": [
          0,
          3
        ],
        "frequency": 158.3648804022451,
        "l": 161.75784806776215,
        "phase": 0.1909859317102744,
        "divisions": 5,
        "cents": 480.0000000000002
      },
      {
        "key": [
          0,
          4
        ],
        "frequency": 137.86463584049778,
        "l": 209.6771307570162,
        "phase": 0.25464790894703254,
        "divisions": 5,
        "cents": 240.00000000000014
      }
    ]
  },
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          1,
          0
        ],
        "frequency": 339.42490433930243,
        "l": 280.8770366151386,
        "phase": 0.3183098861837907,
        "divisions": 5,
        "cents": 1200.0
      },
      {
        "key": [
          1,
          1
        ],
        "frequency": 295.48654166931277,
        "l": 328.7963193043926,
        "phase": 0.3819718634205488,
        "divisions": 5,
        "cents": 959.9999999999999
      },
      {
        "key": [
          1,
          2
        ],
        "frequency": 257.2359752966439,
        "l": 376.71560199364666,
        "phase": 0.44563384065730693,
        "divisions": 5,
        "cents": 720.0000000000001
      },
      {
        "key": [
          1,
          3
        ],
        "frequency": 223.93692319452123,
        "l": 424.6348846829007,
        "phase": 0.5092958178940651,
        "divisions": 5,
        "cents": 479.9999999999999
      },
      {
        "key": [
          1,
          4
        ],
        "frequency": 194.94841462979133,
        "l": 472.5541673721547,
        "phase": 0.5729577951308232,
        "divisions": 5,
        "cents": 239.9999999999998
      }
    ]
  }
]
