crates/common/src/instrument/snapshots/common__instrument__config__tests__config_1536x864_In.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  [
    {
      "channel": "Right",
      "nodes": [
        {
          "key": [
            0,
            0
          ],
          "frequency": 149.37405564246507,
          "l": 396.6971884155658,
          "phase": 0.0,
          "divisions": 5,
          "cents": 378.93105489191163
        },
        {
          "key": [
            0,
            1
          ],
          "frequency": 164.94756195844656,
          "l": 444.6164711048198,
          "phase": 0.06366197723675814,
          "divisions": 5,
          "cents": 550.6244889875309
        },
        {
          "key": [
            0,
            2
          ],
          "frequency": 184.146376245057,
          "l": 492.53575379407386,
          "phase": 0.12732395447351627,
          "divisions": 5,
          "cents": 741.2391528225359
        },
        {
          "key": [
            0,
            3
          ],
          "frequency": 208.4031340941284,
          "l": 540.455036483328,
          "phase": 0.1909859317102744,
          "divisions": 5,
          "cents": 955.46791287266
        },
        {
          "key": [
            0,
            4
          ],
          "frequency": 240.01984823368605,
          "l": 588.374319172582,
          "phase": 0.25464790894703254,
          "divisions": 5,
          "cents": 1200.0
        }
      ]
    },
    {
      "channel": "Left",
      "nodes": [
        {
          "key": [
            1,
            0
          ],
          "frequency": 298.74811128493013,
          "l": 659.5742250307044,
          "phase": 0.3183098861837907,
          "divisions": 5,
          "cents": 378.93105489191163
        },
        {
          "key": [
            1,
            1
          ],
          "frequency": 329.8951239168931,
          "l": 707.4935077199584,
          "phase": 0.3819718634205488,
          "divisions": 5,
          "cents": 550.6244889875309
        },
        {
          "key": [
            1,
            2
          ],
          "frequency": 368.292752490114,
          "l": 755.4127904092124,
          "phase": 0.44563384065730693,
          "divisions": 5,
          "cents": 741.2391528225359
        },
        {
          "key": [
            1,
            3
          ],
          "frequency": 416.8062681882568,
          "l": 803.3320730984665,
          "phase": 0.5092958178940651,
          "divisions": 5,
          "cents": 955.46791287266
        },
        {
          "key": [
            1,
            4
          ],
          "frequency": 480.0396964673721,
          "l": 851.2513557877205,
          "phase": 0.5729577951308232,
          "divisions": 5,
          "cents": 1200.0
        }
      ]
    }
  ],
  "In"
]
