crates/common/src/instrument/snapshots/common__instrument__config__tests__config_1600x900.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  {
    "channel": "Right",
    "nodes": [
      {
        "key": [
          0,
          0
        ],
        "frequency": 120.04773395710404,
        "l": 18.0,
        "phase": 0.0,
        "divisions": 7,
        "cents": 0.0
      },
      {
        "key": [
          0,
          1
        ],
        "frequency": 132.5434442023422,
        "l": 55.114017493578956,
        "phase": 0.04547284088339867,
        "divisions": 7,
        "cents": 171.42857142857127
      },
      {
        "key": [
          0,
          2
        ],
        "frequency": 146.3398268500161,
        "l": 92.22803498715791,
        "phase": 0.09094568176679733,
        "divisions": 7,
        "cents": 342.8571428571428
      },
      {
        "key": [
          0,
          3
        ],
        "frequency": 161.5722682579442,
        "l": 129.34205248073687,
        "phase": 0.136418522650196,
        "divisions": 7,
        "cents": 514.2857142857143
      },
      {
        "key": [
          0,
          4
        ],
        "frequency": 178.39024708408832,
        "l": 166.45606997431582,
        "phase": 0.18189136353359467,
        "divisions": 7,
        "cents": 685.7142857142857
      },
      {
        "key": [
          0,
          5
        ],
        "frequency": 196.95880114722232,
        "l": 203.57008746789478,
        "phase": 0.22736420441699334,
        "divisions": 7,
        "cents": 857.1428571428571
      },
      {
        "key": [
          0,
          6
        ],
        "frequency": 217.46014697241375,
        "l": 240.68410496147374,
        "phase": 0.272837045300392,
        "divisions": 7,
        "cents": 1028.5714285714284
      }
    ]
  },
  {
    "channel": "Left",
    "nodes": [
      {
        "key": [
          1,
          0
        ],
        "frequency": 240.07678712878646,
        "l": 296.9981224550527,
        "phase": 0.3183098861837907,
        "divisions": 7,
        "cents": 0.0
      },
      {
        "key": [
          1,
          1
        ],
        "frequency": 265.0662631453932,
        "l": 334.11213994863164,
        "phase": 0.36378272706718934,
        "divisions": 7,
        "cents": 171.42857142857127
      },
      {
        "key": [
          1,
          2
        ],
        "frequency": 292.65688156753197,
        "l": 371.2261574422106,
        "phase": 0.409255567950588,
        "divisions": 7,
        "cents": 342.8571428571428
      },
      {
        "key": [
          1,
          3
        ],
        "frequency": 323.1193940431909,
        "l": 408.34017493578955,
        "phase": 0.4547284088339867,
        "divisions": 7,
        "cents": 514.2857142857143
      },
      {
        "key": [
          1,
          4
        ],
        "frequency": 356.75273462772356,
        "l": 445.4541924293685,
        "phase": 0.5002012497173853,
        "divisions": 7,
        "cents": 685.7142857142857
      },
      {
        "key": [
          1,
          5
        ],
        "frequency": 393.8869532769259,
        "l": 482.56820992294746,
        "phase": 0.545674090600784,
        "divisions": 7,
        "cents": 857.1428571428571
      },
      {
        "key": [
          1,
          6
        ],
        "frequency": 434.8864546859807,
        "l": 519.6822274165264,
        "phase": 0.5911469314841826,
        "divisions": 7,
        "cents": 1028.5714285714284
      }
    ]
  }
]
