crates/common/src/instrument/snapshots/common__instrument__config__tests__config_1600x900_Yo.snap
---
source: crates/common/src/instrument/config.rs
expression: config
---
[
  [
    {
      "channel": "Right",
      "nodes": [
        {
          "key": [
            0,
            0
          ],
          "frequency": 120.04742721812954,
          "phase": 0.0,
          "cents": 0.0,
          "l_mm": 400.0056265875201,
          "w_kg": 0.4,
          "v_cm3": 200.0
        },
        {
          "key": [
            0,
            1
          ],
          "frequency": 137.8982821670917,
          "phase": 0.1,
          "cents": 240.00000000000014,
          "l_mm": 334.29907652889324,
          "w_kg": 0.2867484657747546,
          "v_cm3": 116.7447139861533
        },
        {
          "key": [
            0,
            2
          ],
          "frequency": 158.40352988225519,
          "phase": 0.2,
          "cents": 479.9999999999999,
          "l_mm": 249.01945583004462,
          "w_kg": 0.20556170656043904,
          "v_cm3": 48.253801581837486
        },
        {
          "key": [
            0,
            3
          ],
          "frequency": 181.95787420147022,
          "phase": 0.30000000000000004,
          "cents": 719.9999999999999,
          "l_mm": 170.85898807802906,
          "w_kg": 0.14736125994561547,
          "v_cm3": 15.586377283137358
        },
        {
          "key": [
            0,
            4
          ],
          "frequency": 209.01471077398628,
          "phase": 0.4,
          "cents": 959.9999999999999,
          "l_mm": 111.59024945834956,
          "w_kg": 0.10563903801010009,
          "v_cm3": 4.342206170497982
        }
      ]
    },
    {
      "channel": "Left",
      "nodes": [
        {
          "key": [
            1,
            0
          ],
          "frequency": 240.09485443625908,
          "phase": 0.5,
          "cents": 0.0,
          "l_mm": 71.69286836364469,
          "w_kg": 0.07572958018829294,
          "v_cm3": 1.1514883917698864
        },
        {
          "key": [
            1,
            1
          ],
          "frequency": 275.7965643341834,
          "phase": 0.6000000000000001,
          "cents": 240.00000000000014,
          "l_mm": 46.823554061025646,
          "w_kg": 0.05428835233189814,
          "v_cm3": 0.3207929533060527
        },
        {
          "key": [
            1,
            2
          ],
          "frequency": 316.80705976451037,
          "phase": 0.7000000000000001,
          "cents": 479.9999999999999,
          "l_mm": 32.12690766838664,
          "w_kg": 0.03891775435152777,
          "v_cm3": 0.10361877895817391
        },
        {
          "key": [
            1,
            3
          ],
          "frequency": 363.91574840294044,
          "phase": 0.8,
          "cents": 719.9999999999999,
          "l_mm": 23.931340607195118,
          "w_kg": 0.027899015879248423,
          "v_cm3": 0.04282849158029575
        },
        {
          "key": [
            1,
            4
          ],
          "frequency": 418.02942154797256,
          "phase": 0.9,
          "cents": 959.9999999999999,
          "l_mm": 20.00028132937601,
          "w_kg": 0.02,
          "v_cm3": 0.025
        }
      ]
    }
  ],
  "Yo"
]
